fix the alignment footer page

--- a/client/ui-app/src/Internals/clientComponent/featuredService/featureService.css
+++ b/client/ui-app/src/Internals/clientComponent/featuredService/featureService.css
@@ -62,7 +62,7 @@
     width: 100px;
     height: 140px;
   }
-  .service-icon {
+  .service-icons {
     width: 55px;
     height: 55px;
     padding: 8px;
@@ -82,7 +82,7 @@
     width: 115px;
     height: 150px;
   }
-  .service-icon {
+  .service-icons {
     width: 60px;
     height: 60px;
     padding: 9px;
@@ -102,7 +102,7 @@
     width: 125px;
     height: 155px;
   }
-  .service-icon {
+  .service-icons {
     width: 65px;
     height: 65px;
     padding: 10px;
@@ -122,7 +122,7 @@
     width: 140px;
     height: 160px;
   }
-  .service-icon {
+  .service-icons {
     width: 75px;
     height: 75px;
     padding: 12px;
